--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,6 +20,9 @@ body{
     position: relative;
     font-family: 'Roboto', sans-serif;
     border-radius: 5px;
+    box-shadow: 0px 6px 15px 2px rgba(75, 74, 74, 0.747);
+    z-index: 1;
+    visibility: hidden;
     .name{
         margin-top: 10px;
         font-size: 1rem;
@@ -60,20 +63,57 @@ body{
     }
 }
 
-img{
+@mixin img( $yon ){
     width: 162px*1.25;
     height: 250px*1.25;
-    // box-shadow: 1px 1px 8px 10px thistle;
-    position: absolute;
-    top: -25px;
-    left: 30px;
+    box-shadow: 0px 6px 15px 2px rgba(75, 74, 74, 0.747);
+    position: fixed;
+    top: 85px;
+    left: $yon;
+    z-index: 2;
+}
+.marvel{
+    @include img(415px);
+    &:hover+.hero{
+        visibility: visible
+    }
+}
+
+.future{
+    @include img(730px);
+    &:hover+.fantastic{
+        visibility: visible
+    }
+}
+
+@mixin hover{
+    &:hover{
+        visibility: visible;
+        cursor: pointer;
+        animation-name: box;
+        animation-duration: 1.5s;
+        animation-delay: 0.5s;
+        animation-timing-function: ease;
+        animation-direction: alternate;
+    }
 }
 
 .hero{
     @include box(20px, 380px);
-
+    @include hover;
 }
 
 .fantastic{
     @include box(380px, 20px);
+    @include hover;
+}
+
+
+@keyframes box {
+    from{
+        transform: scale(0.9, 0.9);
+    }
+    to{
+        transform: scale(1, 1);
+    }
 }
